style.css
.header, .description {
    display: flex;
    justify-content: space-between;
    padding: 25px 100px;
    background-color: #1f2937;
    color: #f9faf8;
}

ul {
    list-style: none;
    margin: 0;
    padding: 0;
    gap: 16px;
}

.img0 {
    max-height: 200px;
    max-width: 100%; 
}

.pics {
    display: flex;
    margin-bottom: 10px;
    border-color: #3882f6;
    border-style: solid;
    border-width: 4px;
    border-radius: 8px;
}

.leftlinks {
    display: flex;
    font-weight: 900;
    font-size: 24px;
    padding-right: 10px;

}

.rightlinks {
    display: flex;
}

.description {
    display: flex;
}

.image {
    display: flex;
    align-items: center;
    justify-content: end;
    padding-left: 10px;
}

.description-title {
    font-size: 40px;
    font-weight: 700;
}

.description-body {
    max-width: 400px;
    padding: 20px 0px 20px 0px;
}

.suggestion {
    display: flex;
    align-items: center;
    font-size: 24px;
    max-width: max-content;
    min-width: min-content;
    border-radius: 8px;
    background-color: #3882f6;
    color: #e5e7eb;
    border-style: none;

}

.section1 {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    padding: 50px 50px;
    font-size: 36px;
    font-weight: 900;
    color: #1f2937;
}

.location {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    margin-bottom: 25px;
    flex-wrap: wrap;
    border-radius: 8px;
    text-align: center;
   
}

.section2 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-size: 36px;
    font-style: italic;
    color: #1f2937;
    padding: 50px 200px;
    background-color: #e5e7eb;

}

.author {
    display: flex;
    justify-content: flex-end;
    padding-top: 10px;
    font-weight: 900;
    font-style: normal;

}

/*.section3 {
    display: flex;
    flex-grow: 1;
    flex-shrink: 1;
    flex-basis: 0;
    width: 1000px;
    justify-content: center;
    background-color: #3882f6;
    margin: 100px;
}*/

.container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.section3 {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #3882f6;
    padding: 25px 100px;
    margin: 25px 100px;
    max-width: fit-content;
    flex-wrap: wrap;
    border-radius: 8px;
    color: #e5e7eb;

}

.section3-wrapper {
    display: flex;
    flex-direction: column;
    padding-right: 100px;
}

.section3-title {
    display: flex;
    font-size: 24px;
    font-weight: 900;
}

.section3-info {
    max-width: 400px;
    padding-bottom: 10px;

}

.section3-button {
    display: flex;
    justify-content: center;
    align-items: center;
    text-decoration: none;
    font-size: 24px;
    border-radius: 8px;
    background-color: #3882f6;
    color: #e5e7eb;
    border-color: #e5e7eb;
    border-style: solid;
    border-width: 2px;
    padding: 10px;
    max-height: 40px;
    
}

.footer {
    display: flex;
    justify-content: center;
    padding: 25px 50px;
    background-color: #1f2937;
    color: white;
}

